chore: fix of the vulnerabilities in NPM dependencies

--- a/package.json
+++ b/package.json
@@ -17,6 +17,6 @@
   "license": "Apache-2.0",
   "dependencies": {},
   "devDependencies": {
-    "concurrently": "4.0.1"
+    "concurrently": "^5.0.0"
   }
 }
